# quiz-rag

./: .gitignore  README.md  main.py  package.json  pyproject.toml  shell.nix
apps/backend/: package.json  wrangler.jsonc
apps/backend/src/: index.ts
apps/frontend/: package.json
apps/frontend/src/: App.tsx
apps/frontend/src/utils/: client.ts
db/: scraper.py  seed.py
