[project]
name = "quiz-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "google-genai>=1.31.0",
    "langchain>=0.3.27",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
